# claude-prompt-refiner

./: CONTRIBUTING.md  LICENSE  README.md  app.py  claude.py  engine.py  main.py  pyproject.toml  requirements.txt  techniques.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  publish.yml
Formula/: claude-prompt-refiner.rb
docs/plans/: 2026-04-05-homebrew-pypi-distribution-design.md  2026-04-05-prompt-refiner-design.md  2026-04-05-prompt-refiner-impl.md
tests/: test_claude.py  test_engine.py  test_techniques.py
